syntax = "proto3";
package proto;

import "google/api/annotations.proto";
import "common.proto";
import "types/basic.proto";


option go_package = ".;proto";

service MinerAPI{
    rpc GetRewardData(RewardParam) returns (Bytes){
        option (google.api.http) = {
           get: "/miner/getRewardData"
       };
    }

    rpc UnpackRewardData(Bytes) returns (RewardParam) {
        option (google.api.http) = {
           get: "/miner/unpackRewardData"
       };
    }

    rpc GetAvailRewardInfo(types.Address) returns (MinerAvailRewardInfo) {
        option (google.api.http) = {
           get: "/miner/getAvailRewardInfo"
       };
    }

    rpc GetRewardSendBlock(RewardParam) returns (types.StateBlock) {
        option (google.api.http) = {
           get: "/miner/getRewardSendBlock"
       };
    }

    rpc GetRewardRecvBlock(types.StateBlock) returns (types.StateBlock) {
        option (google.api.http) = {
           post: "/miner/getRewardRecvBlock"
           body: "*"
       };
    }

    rpc GetRewardRecvBlockBySendHash(types.Hash) returns (types.StateBlock) {
        option (google.api.http) = {
           get: "/miner/getRewardRecvBlockBySendHash"
       };
    }

    rpc GetRewardHistory(types.Address) returns (MinerHistoryRewardInfo) {
        option (google.api.http) = {
           get: "/miner/getRewardHistory"
       };
    }
}

message RewardParam  {
    string coinbase      = 1;
    string beneficial    = 2;
    uint64 startHeight   = 3;
    uint64 endHeight     = 4;
    uint64 rewardBlocks  = 5;
    int64  rewardAmount  = 6;
}

message MinerAvailRewardInfo {
    uint64 lastEndHeight          = 1;
    uint64 latestBlockHeight      = 2;
    uint64 nodeRewardHeight       = 3;
    uint64 availStartHeight       = 4;
    uint64 availEndHeight         = 5;
    uint64 availRewardBlocks      = 6;
    int64  availRewardAmount      = 7;
    bool   needCallReward         = 8;
}

message MinerHistoryRewardInfo  {
    uint64 lastEndHeight     = 1;
    uint64 rewardBlocks      = 2;
    int64  rewardAmount      = 3;
    int64  lastRewardTime    = 4;
}
